MB-43914: Add metric to track successful timer callbacks

Change-Id: I3577d06df8b17b7823aa22fd5f5b58fcf6e444d5
Reviewed-on: http://review.couchbase.org/c/eventing/+/144725
Tested-by: Srini Raman <srinivasan.raman@couchbase.com>
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>